# advent_of_ocaml

./: Makefile  README.md  advent_of_code_2015.opam  advent_of_ocaml.opam  dune-project  dune-workspace
codegen/: dune  gen_registry.ml
days/: .gitignore  dune
days/day01/: main.ml
days/day06/: solution.ml
days/day07/: solution.ml
days/day10/: solution.ml
days/day11/: solution.ml
lib/: day.mli  dune  helpers.ml  tsp.ml
