(lang dune 3.19)

(name advent_of_code_2015)

(generate_opam_files true)

(source
 (github cainydev/advent_of_code_2015))

(authors "John Wagner <wajo432@gmail.com>")

(license LICENSE)

(package
 (name advent_of_code_2015)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
